--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "battleship",
+  "name": "portfolio",
+  "homepage": "/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
